Persistence-and-Advanced-Workload-Management/demos/m2-safe-rollouts/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-responder
  namespace: safe-rollouts
spec:
  replicas: 1
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: simple-responder
  template:
    metadata:
      labels:
        app: simple-responder
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: simple-responder
          image: ghcr.io/rummens/simple-responder:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 10
            failureThreshold: 3
