Persistence-and-Advanced-Workload-Management/demos/m2-safe-rollouts/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-responder
  namespace: safe-rollouts
spec:
  selector:
    app: simple-responder
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: web
  type: ClusterIP
