Persistence-and-Advanced-Workload-Management/demos/m2-safe-rollouts/route-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple-responder
  namespace: safe-rollouts
spec:
  to:
    kind: Service
    name: simple-responder
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
